# xsh

./: .gitignore  README.md  script.txt  stack.yaml  void.env  xsh.cabal  xsh.lock-8.0.1
examples/: echo  pipe
main/: xsh.hs
src/Xsh/: Data.hs  Expansion.hs  Interpretter.hs  Lexer.hs  Parser.hs  Prelude.hs
test/: test.hs
test/Test/Xsh/: Arbitrary.hs  Lexer.hs  Parser.hs
