name: xsh
version: 0.0.1
license: AllRightsReserved
author: Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2017 Mark Hibberd
cabal-version: >= 1.24
build-type: Simple
description:
  A toy shell.

library
  default-language: Haskell2010

  build-depends:
      base >= 3 && < 5
    , async == 2.1.*
    , containers >= 0.4 && < 0.6
    , megaparsec == 5.3.*
    , process == 1.4.*
    , text >= 1.1 && < 1.3
    , unix == 2.7.*
  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Xsh.Data
    Xsh.Expansion
    Xsh.Interpretter
    Xsh.Lexer
    Xsh.Parser
    Xsh.Prelude


executable xsh
  default-language: Haskell2010
  main-is: main/xsh.hs
  build-depends:
      base >= 3 && < 5
    , haskeline == 0.7.*
    , optparse-applicative == 0.13.*
    , xsh

  ghc-options:
    -Wall
    -O2
    -threaded

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 3 && < 5
    , megaparsec
    , text
    , xsh
    , QuickCheck >= 2.8.2 && < 2.9
    , quickcheck-instances == 0.3.*

  ghc-options:
    -Wall
    -threaded
    -O2
